--- a/Sheaft.Manage/Views/Account/Impersonate.cshtml
+++ b/Sheaft.Manage/Views/Account/Impersonate.cshtml
@@ -29,7 +29,9 @@ else
     <table class="table table-hover">
         <thead class="thead-dark">
             <tr>
-                <th>Name</th>
+                <th>Kind</th>
+                <th>FirstName</th>
+                <th>LastName</th>
                 <th>Email</th>
                 <th>Company</th>
                 <th></th>
@@ -41,7 +43,9 @@ else
                 @foreach (var user in Model)
                 {
                     <tr>
-                        <td>@user.Name</td>
+                        <td>@user.Kind</td>
+                        <td>@user.FirstName</td>
+                        <td>@user.LastName</td>
                         <td>@user.Email</td>
                         <td>@user.Company</td>
                         <td>
