--- a/Sheaft.Manage/Views/_ViewImports.cshtml
+++ b/Sheaft.Manage/Views/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using Sheaft.Manage.Models
 @using Sheaft.Models.ViewModels
 @using Sheaft.Interop.Enums;
+@using Sheaft.Interop;
 @using Sheaft.Core.Extensions;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
