--- a/Sheaft.Manage/Views/Companies/Index.cshtml
+++ b/Sheaft.Manage/Views/Companies/Index.cshtml
@@ -52,33 +52,35 @@
             <thead class="thead-dark">
                 <tr>
                     <th scope="col">Name</th>
+                    <th scope="col">Kind</th>
                     <th scope="col">CreatedOn</th>
-                    <th scope="col">Type</th>
+                    <th scope="col">Removed</th>
                     <th scope="col"></th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var entity in Model)
                 {
-                    <tr>
-                        <th scope="row">@entity.Name</th>
-                        <td>@entity.CreatedOn</td>
-                        <td>@entity.Kind.ToString("G")</td>
-                        <td>
-                            <a asp-controller="Companies" asp-action="Edit" asp-route-id="@entity.Id" class="btn btn-info">
-                                <i class="fa fa-pen"></i>
-                            </a>
-                            @if (User.IsInRole("ADMIN"))
+                <tr>
+                    <th scope="row">@entity.Name</th>
+                    <td>@entity.Kind</td>
+                    <td>@entity.CreatedOn</td>
+                    <td>@entity.RemovedOn.HasValue</td>
+                    <td>
+                        <a asp-controller="Companies" asp-action="Edit" asp-route-id="@entity.Id" class="btn btn-info">
+                            <i class="fa fa-pen"></i>
+                        </a>
+                        @if (!entity.RemovedOn.HasValue)
+                        {
+                            @using (Html.BeginForm("Delete", "Companies", new { id = entity.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
                             {
-                                @using (Html.BeginForm("Delete", "Companies", new { id = entity.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
-                                {
-                                    <button type="submit" class="btn btn-danger">
-                                        <i class="fa fa-trash"></i>
-                                    </button>
-                                }
+                                <button type="submit" class="btn btn-danger">
+                                    <i class="fa fa-trash"></i>
+                                </button>
                             }
-                        </td>
-                    </tr>
+                        }
+                    </td>
+                </tr>
                 }
             </tbody>
             <tfoot>
