--- a/Sheaft.Manage/Views/Users/Index.cshtml
+++ b/Sheaft.Manage/Views/Users/Index.cshtml
@@ -3,91 +3,110 @@
     ViewData["Title"] = "Users";
     int take = ViewBag.Take;
     int currentPage = ViewBag.Page;
+    ProfileKind? kind = ViewBag.Kind;
 }
 
-<div class="container">
-    <h1 class="display-4">Users</h1>
-    <br />
-
-    @if (ViewBag.Removed != null)
-    {
-        <div class="alert alert-success alert-dismissible fade show" role="alert">
-            <span>Successfully removed user @ViewBag.Removed</span>
-
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
+    <div class="container">
+        <h1 class="display-4">Users</h1>
         <br />
-    }
 
-    @if (ViewBag.Edited != null)
-    {
-        <div class="alert alert-success alert-dismissible fade show" role="alert">
-            <span>Successfully updated user @ViewBag.Edited.Name</span>
-            <a asp-controller="Users" asp-action="Edit" asp-route-id="@ViewBag.Edited.Id">View details</a>
+        @if (ViewBag.Removed != null)
+        {
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                <span>Successfully removed user @ViewBag.Removed</span>
 
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <br />
+        }
+
+        @if (ViewBag.Edited != null)
+        {
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                <span>Successfully updated user @ViewBag.Edited.Name</span>
+                <a asp-controller="Users" asp-action="Edit" asp-route-id="@ViewBag.Edited.Id">View details</a>
+
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <br />
+        }
+
+    <div class="btn-group">
+        <label class="btn btn-secondary @(kind == null ? "active": "")">
+            <a asp-controller="Users" asp-action="Index" asp-route-kind="" asp-route-take="@take" asp-route-page="@currentPage" class="text-white">All</a>
+        </label>
+        <label class="btn btn-secondary @(kind == ProfileKind.Producer ? "active": "")">
+            <a asp-controller="Users" asp-action="Index" asp-route-kind="@ProfileKind.Producer" asp-route-take="@take" asp-route-page="@currentPage" class="text-white">Producers</a>
+        </label>
+        <label class="btn btn-secondary @(kind == ProfileKind.Store ? "active": "")">
+            <a asp-controller="Users" asp-action="Index" asp-route-kind="@ProfileKind.Store" asp-route-take="@take" asp-route-page="@currentPage" class="text-white">Stores</a>
+        </label>
+        <label class="btn btn-secondary @(kind == ProfileKind.Consumer ? "active": "")">
+            <a asp-controller="Users" asp-action="Index" asp-route-kind="@ProfileKind.Consumer" asp-route-take="@take" asp-route-page="@currentPage" class="text-white">Consumers</a>
+        </label>
+    </div>
         <br />
-    }
 
-    <table class="table table-hover">
-        <thead class="thead-dark">
-            <tr>
-                <th scope="col">Name</th>
-                <th scope="col">Email</th>
-                <th scope="col">CreatedOn</th>
-                <th scope="col">Kind</th>
-                <th scope="col">Company</th>
-                <th scope="col"></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var entity in Model)
-            {
-            <tr>
-                <td scope="row">@entity.Kind</td>
-                <th>@($"{entity.FirstName} {entity.LastName}")</th>
-                <th>@entity.Email</th>
-                <td>@entity.CreatedOn</td>
-                <td>@entity.Company</td>
-                <td>
-                    <a asp-controller="Users" asp-action="Edit" asp-route-id="@entity.Id" class="btn btn-info">
-                        <i class="fa fa-pen"></i>
-                    </a>
-                    @if (User.IsInRole("ADMIN"))
-                    {
-                        @using (Html.BeginForm("Delete", "Users", new { id = entity.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
+        <table class="table table-hover">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Kind</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Company</th>
+                    <th scope="col">CreatedOn</th>
+                    <th scope="col">Removed</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var entity in Model)
+                {
+                <tr>
+                    <th scope="row">@($"{entity.FirstName} {entity.LastName}")</th>
+                    <td>@entity.Kind</td>
+                    <th>@entity.Email</th>
+                    <td>@entity.Company</td>
+                    <td>@entity.CreatedOn</td>
+                    <td>@entity.RemovedOn.HasValue</td>
+                    <td>
+                        <a asp-controller="Users" asp-action="Edit" asp-route-id="@entity.Id" class="btn btn-info">
+                            <i class="fa fa-pen"></i>
+                        </a>
+                        @if (!entity.RemovedOn.HasValue)
                         {
-                            <button type="submit" class="btn btn-danger">
-                                <i class="fa fa-trash"></i>
-                            </button>
+                            @using (Html.BeginForm("Delete", "Users", new { id = entity.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
+                            {
+                                <button type="submit" class="btn btn-danger">
+                                    <i class="fa fa-trash"></i>
+                                </button>
+                            }
                         }
-                    }
-                </td>
-            </tr>
-            }
-        </tbody>
-        <tfoot>
-            <tr class="text-center">
-                <td colspan="4">
-                    @if (currentPage >= 1)
-                    {
-                        <a asp-controller="Users" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage-1)" class="btn btn-info">
-                            <i class="fa fa-caret-left"></i>
-                        </a>
-                    }
-                    @if (take == Model.Count())
-                    {
-                        <a asp-controller="Users" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage+1)" class="btn btn-info">
-                            <i class="fa fa-caret-right"></i>
-                        </a>
-                    }
-                </td>
-            </tr>
-        </tfoot>
-    </table>
-</div>
+                    </td>
+                </tr>
+                }
+            </tbody>
+            <tfoot>
+                <tr class="text-center">
+                    <td colspan="4">
+                        @if (currentPage >= 1)
+                        {
+                            <a asp-controller="Users" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage-1)" class="btn btn-info">
+                                <i class="fa fa-caret-left"></i>
+                            </a>
+                        }
+                        @if (take == Model.Count())
+                        {
+                            <a asp-controller="Users" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage+1)" class="btn btn-info">
+                                <i class="fa fa-caret-right"></i>
+                            </a>
+                        }
+                    </td>
+                </tr>
+            </tfoot>
+        </table>
+    </div>
